Change current to curr in l3regex internals
Since public l3file variables about the current file use this
abbreviation "curr" it seems more natural to use it there too.

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -898,16 +898,16 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int, rEXP]{\@@_current_cs_to_str:}
+% \begin{macro}[int, rEXP]{\@@_curr_cs_to_str:}
 %   Expands to the string representation of the token (known to be a
-%   control sequence) at the current position \cs{l_@@_current_pos_int}.
+%   control sequence) at the current position \cs{l_@@_curr_pos_int}.
 %   It should only be used in \texttt{x}-expansion to avoid losing a
 %   leading space.
 %    \begin{macrocode}
-\cs_new:Npn \@@_current_cs_to_str:
+\cs_new:Npn \@@_curr_cs_to_str:
   {
     \exp_after:wN \exp_after:wN \exp_after:wN \cs_to_str:N
-    \tex_the:D \tex_toks:D \l_@@_current_pos_int
+    \tex_the:D \tex_toks:D \l_@@_curr_pos_int
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1046,14 +1046,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_item_caseful_equal:n #1
   {
-    \if_int_compare:w #1 = \l_@@_current_char_int
+    \if_int_compare:w #1 = \l_@@_curr_char_int
       \exp_after:wN \@@_break_true:w
     \fi:
   }
 \cs_new_protected:Npn \@@_item_caseful_range:nn #1 #2
   {
-    \reverse_if:N \if_int_compare:w #1 > \l_@@_current_char_int
-      \reverse_if:N \if_int_compare:w #2 < \l_@@_current_char_int
+    \reverse_if:N \if_int_compare:w #1 > \l_@@_curr_char_int
+      \reverse_if:N \if_int_compare:w #2 < \l_@@_curr_char_int
         \exp_after:wN \exp_after:wN \exp_after:wN \@@_break_true:w
       \fi:
     \fi:
@@ -1070,7 +1070,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_item_caseless_equal:n #1
   {
-    \if_int_compare:w #1 = \l_@@_current_char_int
+    \if_int_compare:w #1 = \l_@@_curr_char_int
       \exp_after:wN \@@_break_true:w
     \fi:
     \if_int_compare:w \l_@@_case_changed_char_int = \c_max_int
@@ -1082,8 +1082,8 @@
   }
 \cs_new_protected:Npn \@@_item_caseless_range:nn #1 #2
   {
-    \reverse_if:N \if_int_compare:w #1 > \l_@@_current_char_int
-      \reverse_if:N \if_int_compare:w #2 < \l_@@_current_char_int
+    \reverse_if:N \if_int_compare:w #1 > \l_@@_curr_char_int
+      \reverse_if:N \if_int_compare:w #2 < \l_@@_curr_char_int
         \exp_after:wN \exp_after:wN \exp_after:wN \@@_break_true:w
       \fi:
     \fi:
@@ -1108,15 +1108,15 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_compute_case_changed_char:
   {
-    \int_set_eq:NN \l_@@_case_changed_char_int \l_@@_current_char_int
-    \if_int_compare:w \l_@@_current_char_int > `Z \exp_stop_f:
-      \if_int_compare:w \l_@@_current_char_int > `z \exp_stop_f: \else:
-        \if_int_compare:w \l_@@_current_char_int < `a \exp_stop_f: \else:
+    \int_set_eq:NN \l_@@_case_changed_char_int \l_@@_curr_char_int
+    \if_int_compare:w \l_@@_curr_char_int > `Z \exp_stop_f:
+      \if_int_compare:w \l_@@_curr_char_int > `z \exp_stop_f: \else:
+        \if_int_compare:w \l_@@_curr_char_int < `a \exp_stop_f: \else:
           \int_sub:Nn \l_@@_case_changed_char_int { \c_@@_ascii_lower_int }
         \fi:
       \fi:
     \else:
-      \if_int_compare:w \l_@@_current_char_int < `A \exp_stop_f: \else:
+      \if_int_compare:w \l_@@_curr_char_int < `A \exp_stop_f: \else:
         \int_add:Nn \l_@@_case_changed_char_int { \c_@@_ascii_lower_int }
       \fi:
     \fi:
@@ -1146,7 +1146,7 @@
 \cs_new_protected:Npn \@@_item_catcode:
   {
     "
-    \if_case:w \l_@@_current_catcode_int
+    \if_case:w \l_@@_curr_catcode_int
          1       \or: 4       \or: 10      \or: 40
     \or: 100     \or:         \or: 1000    \or: 4000
     \or: 10000   \or:         \or: 100000  \or: 400000
@@ -1173,18 +1173,18 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_item_exact:nn #1#2
   {
-    \if_int_compare:w #1 = \l_@@_current_catcode_int
-      \if_int_compare:w #2 = \l_@@_current_char_int
+    \if_int_compare:w #1 = \l_@@_curr_catcode_int
+      \if_int_compare:w #2 = \l_@@_curr_char_int
         \exp_after:wN \exp_after:wN \exp_after:wN \@@_break_true:w
       \fi:
     \fi:
   }
 \cs_new_protected:Npn \@@_item_exact_cs:n #1
   {
-    \int_compare:nNnTF \l_@@_current_catcode_int = 0
+    \int_compare:nNnTF \l_@@_curr_catcode_int = 0
       {
         \tl_set:Nx \l_@@_internal_a_tl
-          { \scan_stop: \@@_current_cs_to_str: \scan_stop: }
+          { \scan_stop: \@@_curr_cs_to_str: \scan_stop: }
         \tl_if_in:noTF { \scan_stop: #1 \scan_stop: } \l_@@_internal_a_tl
           { \@@_break_true:w } { }
       }
@@ -1205,10 +1205,10 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_item_cs:n #1
   {
-    \int_compare:nNnT \l_@@_current_catcode_int = 0
+    \int_compare:nNnT \l_@@_curr_catcode_int = 0
       {
         \group_begin:
-          \tl_set:Nx \l_@@_cs_name_tl { \@@_current_cs_to_str: }
+          \tl_set:Nx \l_@@_cs_name_tl { \@@_curr_cs_to_str: }
           \@@_single_match:
           \@@_disable_submatches:
           \@@_build_for_cs:n {#1}
@@ -2451,7 +2451,7 @@
   }
 \cs_new_protected:cpn { @@_prop_.: }
   {
-    \if_int_compare:w \l_@@_current_char_int > - 2 \exp_stop_f:
+    \if_int_compare:w \l_@@_curr_char_int > - 2 \exp_stop_f:
       \exp_after:wN \@@_break_true:w
     \fi:
   }
@@ -3609,7 +3609,7 @@
     \@@_pop_lr_states:
     \@@_toks_put_right:Nn \l_@@_right_state_int
       {
-        \if_int_compare:w \l_@@_current_pos_int = \l_@@_max_pos_int
+        \if_int_compare:w \l_@@_curr_pos_int = \l_@@_max_pos_int
           \exp_after:wN \@@_action_success:
         \fi:
       }
@@ -4144,14 +4144,14 @@
   }
 \cs_new_protected:Npn \@@_anchor:N #1
   {
-    \if_int_compare:w #1 = \l_@@_current_pos_int
+    \if_int_compare:w #1 = \l_@@_curr_pos_int
       \exp_after:wN \@@_break_true:w
     \fi:
   }
 \cs_new_protected:Npn \@@_b_test:
   {
     \group_begin:
-      \int_set_eq:NN \l_@@_current_char_int \l_@@_last_char_int
+      \int_set_eq:NN \l_@@_curr_char_int \l_@@_last_char_int
       \@@_prop_w:
       \@@_break_point:TF
         { \group_end: \@@_item_reverse:n \@@_prop_w: }
@@ -4226,7 +4226,7 @@
 %   {
 %     \l_@@_min_pos_int,
 %     \l_@@_max_pos_int,
-%     \l_@@_current_pos_int,
+%     \l_@@_curr_pos_int,
 %     \l_@@_start_pos_int,
 %     \l_@@_success_pos_int,
 %   }
@@ -4243,7 +4243,7 @@
 %    \begin{macrocode}
 \int_new:N \l_@@_min_pos_int
 \int_new:N \l_@@_max_pos_int
-\int_new:N \l_@@_current_pos_int
+\int_new:N \l_@@_curr_pos_int
 \int_new:N \l_@@_start_pos_int
 \int_new:N \l_@@_success_pos_int
 %    \end{macrocode}
@@ -4251,8 +4251,8 @@
 %
 % \begin{variable}
 %   {
-%     \l_@@_current_char_int,
-%     \l_@@_current_catcode_int,
+%     \l_@@_curr_char_int,
+%     \l_@@_curr_catcode_int,
 %     \l_@@_last_char_int,
 %     \l_@@_case_changed_char_int
 %   }
@@ -4264,25 +4264,25 @@
 %   \texttt{current_char} variable is also used in various other phases
 %   to hold a character code.
 %    \begin{macrocode}
-\int_new:N \l_@@_current_char_int
-\int_new:N \l_@@_current_catcode_int
+\int_new:N \l_@@_curr_char_int
+\int_new:N \l_@@_curr_catcode_int
 \int_new:N \l_@@_last_char_int
 \int_new:N \l_@@_case_changed_char_int
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_current_state_int}
+% \begin{variable}{\l_@@_curr_state_int}
 %   For every character in the token list, each of the active states is
-%   considered in turn.  The variable \cs{l_@@_current_state_int}
+%   considered in turn.  The variable \cs{l_@@_curr_state_int}
 %   holds the state of the \textsc{nfa} which is currently considered:
 %   transitions are then given as shifts relative to the current state.
 %    \begin{macrocode}
-\int_new:N \l_@@_current_state_int
+\int_new:N \l_@@_curr_state_int
 %    \end{macrocode}
 % \end{variable}
 %
 % \begin{variable}
-%   {\l_@@_current_submatches_prop, \l_@@_success_submatches_prop}
+%   {\l_@@_curr_submatches_prop, \l_@@_success_submatches_prop}
 %   The submatches for the thread which is currently active are stored
 %   in the \texttt{current_submatches} property list variable. This
 %   property list is stored by \cs{@@_action_cost:n} into the
@@ -4292,7 +4292,7 @@
 %   \cs{l_@@_success_submatches_prop}: only the last successful thread
 %   remains there.
 %    \begin{macrocode}
-\prop_new:N \l_@@_current_submatches_prop
+\prop_new:N \l_@@_curr_submatches_prop
 \prop_new:N \l_@@_success_submatches_prop
 %    \end{macrocode}
 % \end{variable}
@@ -4414,12 +4414,12 @@
 %<trace>    \trace_push:nnx { regex } { 1 } { @@_match }
 %<trace>    \trace:nnx { regex } { 1 } { analyzing~query~token~list }
     \int_zero:N \l_@@_balance_int
-    \int_set:Nn \l_@@_current_pos_int { 2 * \l_@@_max_state_int }
+    \int_set:Nn \l_@@_curr_pos_int { 2 * \l_@@_max_state_int }
     \@@_query_set:nnn { } { -1 } { -2 }
-    \int_set_eq:NN \l_@@_min_pos_int \l_@@_current_pos_int
+    \int_set_eq:NN \l_@@_min_pos_int \l_@@_curr_pos_int
     \__tl_analysis_map_inline:nn {#1}
       { \@@_query_set:nnn {##1} {"##2} {##3} }
-    \int_set_eq:NN \l_@@_max_pos_int \l_@@_current_pos_int
+    \int_set_eq:NN \l_@@_max_pos_int \l_@@_curr_pos_int
     \@@_query_set:nnn { } { -1 } { -2 }
 %<trace>    \trace:nnx { regex } { 1 } { initializing }
     \bool_gset_false:N \g_@@_success_bool
@@ -4457,16 +4457,16 @@
   {
     \if_meaning:w \c_true_bool \l_@@_empty_success_bool
       \cs_set:Npn \@@_if_two_empty_matches:F
-        { \int_compare:nNnF \l_@@_start_pos_int = \l_@@_current_pos_int }
+        { \int_compare:nNnF \l_@@_start_pos_int = \l_@@_curr_pos_int }
     \else:
       \cs_set_eq:NN \@@_if_two_empty_matches:F \use:n
     \fi:
     \int_set_eq:NN \l_@@_start_pos_int \l_@@_success_pos_int
     \bool_set_false:N \l_@@_match_success_bool
-    \prop_clear:N \l_@@_current_submatches_prop
+    \prop_clear:N \l_@@_curr_submatches_prop
     \int_set_eq:NN \l_@@_max_active_int \l_@@_min_active_int
     \@@_store_state:n { \l_@@_min_state_int }
-    \int_set:Nn \l_@@_current_pos_int
+    \int_set:Nn \l_@@_curr_pos_int
       { \l_@@_start_pos_int - 1 }
     \@@_query_get:
     \@@_match_loop:
@@ -4517,8 +4517,8 @@
 \cs_new_protected:Npn \@@_match_loop:
   {
     \int_add:Nn \l_@@_step_int { 2 }
-    \int_incr:N \l_@@_current_pos_int
-    \int_set_eq:NN \l_@@_last_char_int \l_@@_current_char_int
+    \int_incr:N \l_@@_curr_pos_int
+    \int_set_eq:NN \l_@@_last_char_int \l_@@_curr_char_int
     \int_set_eq:NN \l_@@_case_changed_char_int \c_max_int
     \@@_query_get:
     \use:x
@@ -4533,7 +4533,7 @@
     \__prg_break_point:
     \bool_set_false:N \l_@@_fresh_thread_bool %^^A was arg of break_point:n
     \if_int_compare:w \l_@@_max_active_int > \l_@@_min_active_int
-      \if_int_compare:w \l_@@_current_pos_int < \l_@@_max_pos_int
+      \if_int_compare:w \l_@@_curr_pos_int < \l_@@_max_pos_int
         \exp_after:wN \exp_after:wN \exp_after:wN \@@_match_loop:
       \fi:
     \fi:
@@ -4558,13 +4558,13 @@
 \cs_new_protected:Npn \@@_query_set:nnn #1#2#3
   {
     \__intarray_gset_fast:Nnn \g_@@_charcode_intarray
-      { \l_@@_current_pos_int } {#3}
+      { \l_@@_curr_pos_int } {#3}
     \__intarray_gset_fast:Nnn \g_@@_catcode_intarray
-      { \l_@@_current_pos_int } {#2}
+      { \l_@@_curr_pos_int } {#2}
     \__intarray_gset_fast:Nnn \g_@@_balance_intarray
-      { \l_@@_current_pos_int } { \l_@@_balance_int }
-    \@@_toks_set:Nn \l_@@_current_pos_int {#1}
-    \int_incr:N \l_@@_current_pos_int
+      { \l_@@_curr_pos_int } { \l_@@_balance_int }
+    \@@_toks_set:Nn \l_@@_curr_pos_int {#1}
+    \int_incr:N \l_@@_curr_pos_int
     \if_case:w #2 \exp_stop_f:
     \or: \int_incr:N \l_@@_balance_int
     \or: \int_decr:N \l_@@_balance_int
@@ -4579,12 +4579,12 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_query_get:
   {
-    \l_@@_current_char_int
+    \l_@@_curr_char_int
       = \__intarray_item_fast:Nn \g_@@_charcode_intarray
-          { \l_@@_current_pos_int } \scan_stop:
-    \l_@@_current_catcode_int
+          { \l_@@_curr_pos_int } \scan_stop:
+    \l_@@_curr_catcode_int
       = \__intarray_item_fast:Nn \g_@@_catcode_intarray
-          { \l_@@_current_pos_int } \scan_stop:
+          { \l_@@_curr_pos_int } \scan_stop:
   }
 %    \end{macrocode}
 % \end{macro}
@@ -4602,13 +4602,13 @@
 \cs_new_protected:Npn \@@_use_state:
   {
 %<*trace>
-    \trace:nnx { regex } { 2 } { state~\int_use:N \l_@@_current_state_int }
+    \trace:nnx { regex } { 2 } { state~\int_use:N \l_@@_curr_state_int }
 %</trace>
     \__intarray_gset_fast:Nnn \g_@@_state_active_intarray
-      { \l_@@_current_state_int } { \l_@@_step_int }
-    \@@_toks_use:w \l_@@_current_state_int
+      { \l_@@_curr_state_int } { \l_@@_step_int }
+    \@@_toks_use:w \l_@@_curr_state_int
     \__intarray_gset_fast:Nnn \g_@@_state_active_intarray
-      { \l_@@_current_state_int } { \l_@@_step_int + 1 }
+      { \l_@@_curr_state_int } { \l_@@_step_int + 1 }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -4621,12 +4621,12 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_use_state_and_submatches:nn #1 #2
   {
-    \int_set:Nn \l_@@_current_state_int {#1}
+    \int_set:Nn \l_@@_curr_state_int {#1}
     \if_int_compare:w
         \__intarray_item_fast:Nn \g_@@_state_active_intarray
-          { \l_@@_current_state_int }
+          { \l_@@_curr_state_int }
                       < \l_@@_step_int
-      \tl_set:Nn \l_@@_current_submatches_prop {#2}
+      \tl_set:Nn \l_@@_curr_submatches_prop {#2}
       \exp_after:wN \@@_use_state:
     \fi:
     \scan_stop:
@@ -4660,7 +4660,7 @@
 %   state has not already been used at this position. If not, store
 %   submatches in the new state, and insert the instructions for that
 %   state in the input stream.  Then restore the old value of
-%   \cs{l_@@_current_state_int} and of the current submatches.  The
+%   \cs{l_@@_curr_state_int} and of the current submatches.  The
 %   two types of free transitions differ by how they test that the state
 %   has not been encountered yet: the \texttt{group} version is
 %   stricter, and will not use a state if it was used earlier in the
@@ -4676,20 +4676,20 @@
   {
     \use:x
       {
-        \int_add:Nn \l_@@_current_state_int {#2}
+        \int_add:Nn \l_@@_curr_state_int {#2}
         \exp_not:n
           {
             \if_int_compare:w
                 \__intarray_item_fast:Nn \g_@@_state_active_intarray
-                  { \l_@@_current_state_int }
+                  { \l_@@_curr_state_int }
                 #1
               \exp_after:wN \@@_use_state:
             \fi:
           }
-        \int_set:Nn \l_@@_current_state_int
-          { \int_use:N \l_@@_current_state_int }
-        \tl_set:Nn \exp_not:N \l_@@_current_submatches_prop
-          { \exp_not:o \l_@@_current_submatches_prop }
+        \int_set:Nn \l_@@_curr_state_int
+          { \int_use:N \l_@@_curr_state_int }
+        \tl_set:Nn \exp_not:N \l_@@_curr_submatches_prop
+          { \exp_not:o \l_@@_curr_submatches_prop }
       }
   }
 %    \end{macrocode}
@@ -4705,7 +4705,7 @@
 \cs_new_protected:Npn \@@_action_cost:n #1
   {
     \exp_args:No \@@_store_state:n
-      { \__int_value:w \__int_eval:w \l_@@_current_state_int + #1 }
+      { \__int_value:w \__int_eval:w \l_@@_curr_state_int + #1 }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -4726,7 +4726,7 @@
 \cs_new_protected:Npn \@@_store_submatches:
   {
     \@@_toks_set:No \l_@@_max_active_int
-      { \l_@@_current_submatches_prop }
+      { \l_@@_curr_submatches_prop }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -4752,8 +4752,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_action_submatch:n #1
   {
-    \prop_put:Nno \l_@@_current_submatches_prop {#1}
-      { \int_use:N \l_@@_current_pos_int }
+    \prop_put:Nno \l_@@_curr_submatches_prop {#1}
+      { \int_use:N \l_@@_curr_pos_int }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -4775,9 +4775,9 @@
         \bool_set_true:N \l_@@_match_success_bool
         \bool_set_eq:NN \l_@@_empty_success_bool
           \l_@@_fresh_thread_bool
-        \int_set_eq:NN \l_@@_success_pos_int \l_@@_current_pos_int
+        \int_set_eq:NN \l_@@_success_pos_int \l_@@_curr_pos_int
         \prop_set_eq:NN \l_@@_success_submatches_prop
-          \l_@@_current_submatches_prop
+          \l_@@_curr_submatches_prop
         \__prg_break:
       }
   }
@@ -5732,7 +5732,7 @@
         }
       #1
       \@@_match:n {#2}
-%<assert>\assert_int:n { \l_@@_current_pos_int = \l_@@_max_pos_int }
+%<assert>\assert_int:n { \l_@@_curr_pos_int = \l_@@_max_pos_int }
       \__intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
         { \l_@@_submatch_int } { 0 }
       \__intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
