English [ci skip]

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -140,7 +140,7 @@
 %   \end{itemize}
 %   This function does not expand the \meta{full name} before turning it
 %   to a string.  It assume that the \meta{full name} either contains no
-%   quote (|"|) or is surrounded by a pair of quotes.
+%   quote (|"|) characters or is surrounded by a pair of quotes.
 % \end{function}
 %
 % \begin{function}[updated = 2017-06-26]{\file_input:n}
