Only allow 'appropriate' data for xdvipdfmx image reading

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1753,11 +1753,15 @@
 \cs_new_protected:Npn \@@_image_getbb_jpg:n #1
   {
     \int_zero:N \l__image_page_int
+    \tl_clear:N \l__image_pagebox_tl
     \@@_image_getbb_auxi:nN {#1} \xetex_picfile:D
   }
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
-  { \@@_image_getbb_auxi:nN {#1} \xetex_pdffile:D }
+  {
+    \bool_set_false:N \l__image_interpolate_bool
+    \@@_image_getbb_auxi:nN {#1} \xetex_pdffile:D
+  }
 \cs_new_protected:Npn \@@_image_getbb_auxi:nN #1#2
   {
     \int_compare:nNnTF \l__image_page_int > 1
