Document \l_file_search_path_seq and fix usage of \input@path

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -90,10 +90,11 @@
 % \end{variable}
 %
 % \begin{variable}[added = 2017-06-18]{\l_file_search_path_seq}
-%   Each entry is a (relative) directory which should be searched when
-%   seeking a file. The entries are not expanded when used so
-%   may contain active characters but should not feature any variable
-%   content.
+%   Each entry is the path to a directory which should be searched when
+%   seeking a file. Each path can be relative or absolute, and should
+%   not include the trailing slash. The entries are not expanded when
+%   used so may contain active characters but should not feature any
+%   variable content. Spaces need not be quoted.
 % \end{variable}
 %
 % \begin{function}[TF, updated = 2012-02-10]{\file_if_exist:n}
@@ -892,8 +893,8 @@
 %<*package>
     \cs_if_exist:NT \input@path
       {
-        \clist_map_inline:Nn \input@path
-          { \@@_get_full_name_search:nN { ##1 / } \clist_map_break:n }
+        \tl_map_inline:Nn \input@path
+          { \@@_get_full_name_search:nN { ##1 } \tl_map_break:n }
       }
 %</package>
     \str_clear:N \l__file_full_name_str
