Deprecate \file_list: and (\ior|\iow)_(list|log)_streams:
These haphazard names are replaced by the more logical names
(\file|\ior|\iow)_(show|log)_list:.  As usual, deprecated
commands are kept around until the end of next year.

--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -151,6 +151,11 @@
       { \seq_put_right:Nn \l_file_search_path_seq } { 2018-12-31 }
     \@@_error:Nnn \file_path_remove:n
       { \seq_remove_all:Nn \l_file_search_path_seq } { 2018-12-31 }
+    \@@_error:Nnn \file_list: { \file_log_list: } { 2018-12-31 }
+    \@@_error:Nnn \ior_list_streams: { \ior_show_list: } { 2018-12-31 }
+    \@@_error:Nnn \ior_log_streams: { \ior_log_list: } { 2018-12-31 }
+    \@@_error:Nnn \iow_list_streams: { \iow_show_list: } { 2018-12-31 }
+    \@@_error:Nnn \iow_log_streams: { \iow_log_list: } { 2018-12-31 }
     \cs_set_eq:NN \__fp_parse_round:Nw \__fp_parse_round_deprecation_error:Nw
     \cs_set_eq:NN \deprecation_error: \scan_stop:
   }
