--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1415,6 +1415,8 @@
     \tl_clear:N \l__image_pagebox_tl
     \tl_set:Nx \l_@@_image_attr_tl
       {
+        \tl_if_empty:NF \l__image_decode_tl
+          { :D \l__image_decode_tl }
         \bool_if:NT \l__image_interpolate_bool
           { :I }
       }
@@ -1424,6 +1426,7 @@
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
+    \tl_clear:N \l__image_decode_tl
     \bool_set_false:N \l__image_interpolate_bool
     \tl_set:Nx \l_@@_image_attr_tl
       {
@@ -1455,8 +1458,18 @@
 \cs_new_protected:Npn \@@_image_getbb_auxii:n #1
   {
     \tex_immediate:D \pdftex_pdfximage:D
-      \bool_if:NT \l__image_interpolate_bool
-        { attr ~ { /Interpolate~true } }
+      \bool_lazy_or:nnT
+        { \l__image_interpolate_bool }
+        { ! \tl_if_empty_p:N \l__image_decode_tl }
+        {
+          attr ~
+            {
+              \tl_if_empty:NF \l__image_decode_tl
+                { /Decode~[ \l__image_decode_tl ] }
+              \bool_if:NT \l__image_interpolate_bool
+                { /Interpolate~true }
+            }
+        }
       \int_compare:nNnT \l__image_page_int > 0
         { page ~ \int_use:N \l__image_page_int }
       \tl_if_empty:NF \l__image_pagebox_tl
@@ -1621,6 +1634,7 @@
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
+    \tl_clear:N \l__image_decode_tl
     \bool_set_false:N \l__image_interpolate_bool
     \__image_extract_bb:n {#1}
   }
@@ -1673,6 +1687,8 @@
           { : \l__image_pagebox_tl }
         \int_compare:nNnT \l__image_page_int > 1
           { :P \int_use:N \l__image_page_int }
+        \tl_if_empty:NF \l__image_decode_tl
+          { :D \l__image_decode_tl }
         \bool_if:NT \l__image_interpolate_bool
            { :I }
       }
@@ -1714,8 +1730,17 @@
               \dim_to_decimal_in_bp:n \l__image_ury_dim \c_space_tl
           }
         (#1)
-        \bool_if:NT \l__image_interpolate_bool
-          { <</Interpolate~true>> }
+        \bool_lazy_or:nnT
+          { \l__image_interpolate_bool }
+          { ! \tl_if_empty_p:N \l__imge_decode_tl }
+          {
+            <<
+              \tl_if_empty:NF \l__imge_decode_tl
+                { /Decode~[ \l__imge_decode_tl ] }
+              \bool_if:NT \l__image_interpolate_bool
+                { /Interpolate~true> }
+            >>
+          }
       }
   }
 %    \end{macrocode}
@@ -1759,6 +1784,7 @@
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
+    \tl_clear:N \l__image_decode_tl
     \bool_set_false:N \l__image_interpolate_bool
     \@@_image_getbb_auxi:nN {#1} \xetex_pdffile:D
   }
