--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2635,7 +2635,7 @@
 %   When a control sequence is not on the exclude list the other test if
 %   to see if it is expandable. Once again, if there is a hit then the loop
 %   function is grabbed as part of the clean-up and reinserted before the
-%   now expanded material. The test for expandablity has to check for
+%   now expanded material. The test for expandability has to check for
 %   end-of-recursion as it is needed by the look-ahead code which might hit
 %   the end of the input. The test is done in two parts as \cs{bool_if:nTF}
 %   would choke if |#1| was |(|!
