--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -82,6 +82,23 @@
 % into the kernel. However, real use sometimes leads to better ideas, so functions from this module are
 % \textbf{not necessarily stable} and we may have to adjust them!
 %
+% \section{Additions to \pkg{l3basics}}
+%
+% \begin{function}[added = 2017-07-04]{\mode_leave_vertical:}
+%   \begin{syntax}
+%     \cs{mode_leave_vertical:}
+%   \end{syntax}
+%   Ensures that \TeX{} is not in vertical (inter-paragraph) mode. In
+%   a horizontal mode this command has no effect, in vertical mode it inserts
+%   the \tn{everypar} token list and switches to horizontal mode.
+%   \begin{texnote}
+%     This results in the contents of the \tn{everypar} token register being
+%     inserted, after \cs{mode_leave_vertical:} is complete. Notice that in
+%     contrast to the \LaTeXe{} \tn{leavevmode} approach, no box is used
+%     by the method implemented here.
+%   \end{texnote}
+% \end{function}
+%
 % \section{Additions to \pkg{l3box}}
 %
 % \subsection{Viewing part of a box}
@@ -816,6 +833,36 @@
 %    \begin{macrocode}
 %<*initex|package>
 %    \end{macrocode}
+%
+% \subsection{Additions to \pkg{l3basics}}
+%
+% \begin{macro}{\mode_leave_vertical:}
+%   The approach here is different to that used by \LaTeXe{} or plain \TeX{},
+%   which unbox a void box to force horizontal mode. That inserts the
+%   \tn{everypar} tokens \emph{before} the re-inserted unboxing tokens. The
+%   approach here uses either the \tn{quitvmode} primitive or the equivalent
+%   protected macro. In vertical mode, the \tn{indent} primitive is inserted:
+%   this will switch to horizontal mode and insert \tn{everypar} tokens and
+%   nothing else. Unlike the \LaTeXe{} version, the availability of \eTeX{}
+%   means using a mode test can be done at for example the start of an
+%   \tn{halign}. The \tn{quitevmode} primitive essentially wraps the same
+%   code up at the engine level.
+%    \begin{macrocode}
+\cs_new_protected:Npx \mode_leave_vertical:
+  {
+    \cs_if_exist:NTF \pdftex_quitvmode:D
+      { \pdftex_quitvmode:D }
+      {
+        \exp_not:n
+          {
+            \if_mode_vertical:
+              \exp_after:wN \tex_indent:D
+            \fi:
+          }
+     }
+  }
+%    \end{macrocode}
+% \end{macro}
 %
 % \subsection{Additions to \pkg{l3box}}
 %
