--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -256,15 +256,6 @@
 %
 % \section{Code-level interfaces}
 %
-% \begin{function}{\xbox_leave_vmode:}
-%   \begin{syntax}
-%     \cs{xbox_leave_vmode:}
-%   \end{syntax}
-%   Ensures that \TeX{} is not in vertical (inter-paragraph) mode. In
-%   a horizontal mode this command has no effect, in vertical mode it inserts
-%   the \tn{everypar} token list and switches to horizontal mode.
-% \end{function}
-%
 % \begin{function}{\xbox_to_wd:nnn}
 %   \begin{syntax}
 %     \cs{xbox_to_wd:nnn} \Arg{width} \Arg{position} \Arg{content}
@@ -441,31 +432,6 @@
 \ProvidesExplPackage{xbox}{2017/05/29}{}
   {L3 Experimental document level boxes}
 %    \end{macrocode}
-%
-% \subsection{Leaving vertical mode}
-%
-% \begin{macro}{\xbox_leave_vmode:}
-%   At present, there is no \pkg{expl3} command to leave vertical mode, and
-%   indeed the best way to handle this is not agreed. As such, a
-%   \enquote{local} function is set up to do this.
-%
-%   The approach here is different to that used by \LaTeXe{} or plain \TeX{},
-%   which unbox a void box to force horizontal mode. That inserts the
-%   \tn{everypar} tokens \emph{before} the re-inserted unboxing tokens. The
-%   approach here uses the \tn{indent} primitive, which will switch to
-%   horizontal mode and insert \tn{everypar} tokens and nothing else. The
-%   main difference is that this approach requires that the function is not
-%   expanded for example at the start of \tn{halign} cells. \eTeX{}'s protected
-%   functionality allows that: not the case for the \LaTeXe{} kernel.
-%    \begin{macrocode}
-\cs_new_protected:Npn \xbox_leave_vmode:
-  {
-    \if_mode_vertical:
-      \exp_after:wN \tex_indent:D
-    \fi:
-  }
-%    \end{macrocode}
-% \end{macro}
 %
 % \subsection{Setting up to measure natural width}
 %
@@ -764,7 +730,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \kern_horizontal:n #1
   {
-    \xbox_leave_vmode:
+    \mode_leave_vertical:
     \tex_kern:D \__dim_eval:w #1 \__dim_eval_end:
   }
 \cs_new_protected:Npn \kern_vertical:n #1
@@ -842,7 +808,7 @@
 %    \begin{macrocode}
 \NewDocumentCommand { \mbox } { +m }
   {
-    \xbox_leave_vmode:
+    \mode_leave_vertical:
     \hbox:n {#1}
   }
 %    \end{macrocode}
@@ -857,7 +823,7 @@
 \NewDocumentCommand { \makebox }
   { o > { \SplitArgument { 1 } { , } } d ( ) O { c } +m }
   {
-    \xbox_leave_vmode:
+    \mode_leave_vertical:
     \IfNoValueTF {#2}
       {
         \IfNoValueTF {#1}
@@ -887,7 +853,7 @@
 %    \begin{macrocode}
 \NewDocumentCommand { \fbox } { +m }
   {
-    \xbox_leave_vmode:
+    \mode_leave_vertical:
     \hbox_frame:nnn {#1} { \fboxrule } { \fboxsep }
   }
 %    \end{macrocode}
@@ -903,7 +869,7 @@
 \NewDocumentCommand { \framebox }
   { o > { \SplitArgument { 1 } { , } } d ( ) O { c } +m }
   {
-    \xbox_leave_vmode:
+    \mode_leave_vertical:
     \IfNoValueTF {#2}
       {
         \IfNoValueTF {#1}
@@ -1039,7 +1005,7 @@
 %    \begin{macrocode}
 \NewDocumentCommand { \usebox } { m }
   {
-    \xbox_leave_vmode:
+    \mode_leave_vertical:
     \box_use:N #1
   }
 %    \end{macrocode}
@@ -1052,7 +1018,7 @@
 %    \begin{macrocode}
 \NewDocumentCommand { \rule } { O { 0 pt } m m }
   {
-    \xbox_leave_vmode:
+    \mode_leave_vertical:
     \rule:nnn  { #1 + ( #3 ) } { 0 pt - ( #1 ) } {#2}
   }
 %    \end{macrocode}
@@ -1070,12 +1036,12 @@
 %    \begin{macrocode}
 \NewDocumentCommand { \llap } { m }
   {
-    \xbox_leave_vmode:
+    \mode_leave_vertical:
     \hbox_overlap_left:n  {#1}
   }
 \NewDocumentCommand { \rlap } { m }
   {
-    \xbox_leave_vmode:
+    \mode_leave_vertical:
     \hbox_overlap_right:n {#1}
   }
 %    \end{macrocode}
