Typos/grammar [ci skip]
The texnote just below this is mostly redundant and states no box is 
used, which may look contradictory with the insertion of a box of width 
parindent.  I couldn't think of a better phrasing.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -89,9 +89,9 @@
 %     \cs{mode_leave_vertical:}
 %   \end{syntax}
 %   Ensures that \TeX{} is not in vertical (inter-paragraph) mode. In
-%   a horizontal mode this command has no effect, in vertical mode it
-%   switches to horizontal mode, inserts inserting a box of width
-%   \\tn{parindent}, which then inserts the \tn{everypar} token list.
+%   horizontal or math mode this command has no effect, in vertical mode it
+%   switches to horizontal mode, and inserts a box of width
+%   \tn{parindent}, followed by the \tn{everypar} token list.
 %   \begin{texnote}
 %     This results in the contents of the \tn{everypar} token register being
 %     inserted, after \cs{mode_leave_vertical:} is complete. Notice that in
