s/less/fewer/ [ci skip]

--- a/l3kernel/l3styleguide.tex
+++ b/l3kernel/l3styleguide.tex
@@ -109,7 +109,7 @@ used, as shown in the preceding example.
 
 \section{Format of the code itself}
 
-The requirement for less than $80$ characters per line applies to the code
+The requirement for fewer than $80$ characters per line applies to the code
 itself as well as the surrounding documentation. A number of the general
 style principles for \LaTeX3 code apply: these are described in the following
 paragraph and an example is then given.
