\file_input_end: => \file_input_stop:

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -219,9 +219,9 @@
 %   an error if the file is not found, in contrast to \cs{file_input:n}.
 % \end{function}
 %
-% \begin{function}[added = 2017-07-07]{\file_input_end:}
+% \begin{function}[added = 2017-07-07]{\file_input_stop:}
 %   \begin{syntax}
-%     \cs{file_input_end:}
+%     \cs{file_input_stop:}
 %   \end{syntax}
 %   Ends the reading of a file started by \cs{file_input:n} or similar before
 %   the end of the file is reached. Where the file reading is being terminated
@@ -1560,10 +1560,10 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\file_input_end:}
+% \begin{macro}{\file_input_stop:}
 %   A simple rename.
 %    \begin{macrocode}
-\cs_new_eq:NN \file_input_end: \tex_endinput:D
+\cs_new_eq:NN \file_input_stop: \tex_endinput:D
 %    \end{macrocode}
 % \end{macro}
 %
