Mention \input@path [ci skip]

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -95,6 +95,12 @@
 %   not include the trailing slash. The entries are not expanded when
 %   used so may contain active characters but should not feature any
 %   variable content. Spaces need not be quoted.
+%
+%   \begin{texnote}
+%     When working as a package in \LaTeXe{}, \pkg{expl3} will
+%     automatically append the current \tn{input@path} to the
+%     set of values from \cs{l_file_search_path_seq}.
+%   \end{texnote}
 % \end{variable}
 %
 % \begin{function}[TF, updated = 2012-02-10]{\file_if_exist:n}
