Asdd "mdfive" to name of experimental hash function
As requested by Bruno, this makes it clear that there is a specific form of
hash going on.

I prefer "hash" over "sum" but if others wish we can change.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -206,9 +206,9 @@
 %
 % \section{Additions to \pkg{l3file}}
 %
-% \begin{function}[added = 2017-07-09]{\file_get_hash:nN}
+% \begin{function}[added = 2017-07-11]{\file_get_mdfive_hash:nN}
 %   \begin{syntax}
-%     \cs{file_get_hash:nN} \Arg{file name} \meta{str var}
+%     \cs{file_get_mdfive_hash:nN} \Arg{file name} \meta{str var}
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by \cs{file_path_include:n}.
@@ -1555,7 +1555,8 @@
 %<@@=file>
 %    \end{macrocode}
 %
-% \begin{macro}{\file_get_hash:nN, \file_get_size:nN, \file_get_timestamp:nN, }
+% \begin{macro}
+%   {\file_get_mdfive_hash:nN, \file_get_size:nN, \file_get_timestamp:nN}
 % \begin{macro}[aux]{\@@_get_details:nnN}
 %   These are all wrappers around the \pdfTeX{} primitives doing the same
 %   jobs: as we want consistent file paths to be found, they are all set up
@@ -1565,7 +1566,7 @@
 %   needed for \tn{pdftex_mdfivesum:D} and for the fact that primitive
 %   coverage varies in other engines.
 %    \begin{macrocode}
-\cs_new_protected:Npn \file_get_hash:nN #1#2
+\cs_new_protected:Npn \file_get_mdfive_hash:nN #1#2
   { \@@_get_details:nnN {#1} { mdfivesum } {#2} }
 \cs_new_protected:Npn \file_get_size:nN #1#2
   { \@@_get_details:nnN {#1} { size } {#2} }
@@ -1596,7 +1597,7 @@
        }
   }
   {
-    \cs_set_protected:Npn \file_get_hash:nN #1#2
+    \cs_set_protected:Npn \file_get_mdfive_hash:nN #1#2
       {
         \file_get_full_name:nN {#1} \l_@@_full_name_str
         \tl_set:Nx #2
