Make \dim_to_decimal_in_unit:nn more robust (fixes #376)
I just added parentheses; maybe we should put such parentheses every
time we call \numexpr, \dimexpr, \glueexpr etc.?

--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -498,7 +498,7 @@
 %   the \meta{dimexpr} in \texttt{pt}.  Since dimension expressions are
 %   evaluated much faster than their floating point equivalent,
 %   \cs{dim_to_fp:n} can be used to speed up parts of a computation
-%   where a low precision is acceptable.
+%   where a low precision and a smaller range are acceptable.
 % \end{function}
 %
 % \section{Viewing \texttt{dim} variables}
@@ -1217,7 +1217,7 @@
 \cs_new:Npn \dim_ratio:nn #1#2
   { \@@_ratio:n {#1} / \@@_ratio:n {#2} }
 \cs_new:Npn \@@_ratio:n #1
-  { \__int_value:w \@@_eval:w #1 \@@_eval_end: }
+  { \__int_value:w \@@_eval:w (#1) \@@_eval_end: }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
