Missing "|" [ci skip]

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -234,7 +234,7 @@
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by \cs{file_path_include:n}.
 %   If found, sets the \meta{str var} to the modification timestamp of
-%   the file in the form D:|\meta{year}\meta{month}\meta{day}\meta{hour}^^A
+%   the file in the form |D:|\meta{year}\meta{month}\meta{day}\meta{hour}^^A
 %   \meta{minute}\meta{second}\meta{offset}, where the latter may be |Z|
 %   (UTC) or \meta{plus-minus}\meta{hours}|'|\meta{minutes}|'|.
 %   Where the file is not found, the \meta{str var} will be empty.
